[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.0",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-vertexai>=2.0.24",
    "langchain-openai>=0.3.18",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "upstash-vector>=0.8.0",
]
